@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.465 2005/11/07 16:48:33 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.466 2005/11/07 17:19:51 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
   initial 'pretty' partition table display support
+  clicking partition in 'pretty' display works instead of radio buttons
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
